--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src="loading.gif" alt="Loading...">
   </div>
   
-  <div id="slideshow">
+  <!--<div id="slideshow">
       <div class="slide">
         <img src="0.png" alt="Logotipo Upa" style="max-width: 100%; height: auto;">
       </div>
@@ -82,7 +82,7 @@
 
       <div class="slide">
         <img src="17.png" alt="" style="max-width: 100%; height: auto;">
-      </div>
+      </div>-->
 
     <!-- RECOMENDAÇÕES DA UPA (LOOKER STUDIO) -->
     <div class="slide">
