--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
 
 
 
-    <!-- PACIENTES ATENDIDOS DENTRO DO TEMPO DE ESPERA PELO PROTOCOLO DE MANCHESTER
+    PACIENTES ATENDIDOS DENTRO DO TEMPO DE ESPERA PELO PROTOCOLO DE MANCHESTER
     <div class="slide">
-      <iframe src="https://app.powerbi.com/view?r=eyJrIjoiYTgwZjgzNmYtNmExZi00M2RiLTllMWQtMDgxMzExZTZhMjRlIiwidCI6ImQ2OThhMWFjLTc5N2UtNGVmYS1iMjUwLWZjNGQ5ZGU0OGYzZCJ9&pageName=ReportSection3e2cc0e38714ab4e74f5"></iframe>
-    </div>-->
+      <iframe title="ANÁLISE TEMPO DE ESPERA" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiMDkzYzM3OGYtNWM4Zi00ZDdhLWFhYzgtMmNkYjQ5MmZiZTQwIiwidCI6ImFmNDRlOWVmLWU3MGMtNGM3Ni1iNTk1LTdhOTRmYzBlOGVlZiJ9" frameborder="0" allowFullScreen="true"></iframe>
+    </div>
 
   </div>
 
