--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
 
 
 
-    PACIENTES ATENDIDOS DENTRO DO TEMPO DE ESPERA PELO PROTOCOLO DE MANCHESTER
+    <!-- PACIENTES ATENDIDOS DENTRO DO TEMPO DE ESPERA PELO PROTOCOLO DE MANCHESTER -->
     <div class="slide">
-      <iframe title="ANÁLISE TEMPO DE ESPERA" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiMDkzYzM3OGYtNWM4Zi00ZDdhLWFhYzgtMmNkYjQ5MmZiZTQwIiwidCI6ImFmNDRlOWVmLWU3MGMtNGM3Ni1iNTk1LTdhOTRmYzBlOGVlZiJ9" frameborder="0" allowFullScreen="true"></iframe>
+      <iframe title="ANÁLISE TEMPO DE ESPERA" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiMDkzYzM3OGYtNWM4Zi00ZDdhLWFhYzgtMmNkYjQ5MmZiZTQwIiwidCI6ImFmNDRlOWVmLWU3MGMtNGM3Ni1iNTk1LTdhOTRmYzBlOGVlZiJ9&pageName=ReportSection3e2cc0e38714ab4e74f5" frameborder="0" allowFullScreen="true"></iframe>
     </div>
 
   </div>
