--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src="loading.gif" alt="Loading...">
   </div>
   
-  <!--<div id="slideshow">
+  <div id="slideshow">
       <div class="slide">
         <img src="0.png" alt="Logotipo Upa" style="max-width: 100%; height: auto;">
       </div>
@@ -40,49 +40,6 @@
           <img src="6.png" alt="" style="max-width: 100%; height: auto;">
       </div>
 
-      <div class="slide">
-        <img src="7.png" alt="" style="max-width: 100%; height: auto;">
-      </div>
-      
-      <div class="slide">
-        <img src="8.png" alt="" style="max-width: 100%; height: auto;">
-      </div>
-
-      <div class="slide">
-        <img src="9.png" alt="" style="max-width: 100%; height: auto;">
-      </div>
-
-      <div class="slide">
-        <img src="10.png" alt="" style="max-width: 100%; height: auto;">
-      </div>
-
-      <div class="slide">
-        <img src="11.png" alt="" style="max-width: 100%; height: auto;">
-      </div>
-
-      <div class="slide">
-        <img src="12.png" alt="" style="max-width: 100%; height: auto;">
-      </div>
-
-      <div class="slide">
-        <img src="13.png" alt="" style="max-width: 100%; height: auto;">
-      </div>
-
-      <div class="slide">
-        <img src="14.png" alt="" style="max-width: 100%; height: auto;">
-      </div>
-
-      <div class="slide">
-        <img src="15.png" alt="" style="max-width: 100%; height: auto;">
-      </div>
-
-      <div class="slide">
-        <img src="16.png" alt="" style="max-width: 100%; height: auto;">
-      </div>
-
-      <div class="slide">
-        <img src="17.png" alt="" style="max-width: 100%; height: auto;">
-      </div>-->
 
     <!-- RECOMENDAÇÕES DA UPA (LOOKER STUDIO) -->
     <div class="slide">
