--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
           <img src="6.png" alt="" style="max-width: 100%; height: auto;">
       </div>
 
+      <div class="slide">
+        <img src="7.png" alt="" style="max-width: 100%; height: auto;">
+    </div>
+
 
     <!-- RECOMENDAÇÕES DA UPA (LOOKER STUDIO) -->
     <div class="slide">
