--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
         <img src="7.png" alt="" style="max-width: 100%; height: auto;">
     </div>
 
+    <div class="slide">
+      <img src="8.png" alt="" style="max-width: 100%; height: auto;">
+  </div>
+
+  <div class="slide">
+    <img src="9.png" alt="" style="max-width: 100%; height: auto;">
+</div>
+
+
 
     <!-- RECOMENDAÇÕES DA UPA (LOOKER STUDIO) -->
     <div class="slide">
