--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
   <div id="slideshow">
       <div class="slide">
-        <img src="0.jpg" alt="Logotipo Upa" style="max-width: 100%; height: auto;">
+        <img src="0.png" alt="Logotipo Upa" style="max-width: 100%; height: auto;">
       </div>
       <div class="slide">
         <img src="1.jpg" alt="" style="max-width: 100%; height: auto;">
@@ -30,6 +30,26 @@
       
       <div class="slide">
         <img src="4.jpg" alt="" style="max-width: 100%; height: auto;">
+      </div>
+
+      <div class="slide">
+        <img src="5.png" alt="" style="max-width: 100%; height: auto;">
+      </div>
+
+      <div class="slide">
+        <img src="6.png" alt="" style="max-width: 100%; height: auto;">
+      </div>
+
+      <div class="slide">
+        <img src="7.png" alt="" style="max-width: 100%; height: auto;">
+      </div>
+
+      <div class="slide">
+        <img src="8.png" alt="" style="max-width: 100%; height: auto;">
+      </div>
+
+      <div class="slide">
+        <img src="9.png" alt="" style="max-width: 100%; height: auto;">
       </div>
 
     <!-- RECOMENDAÇÕES DA UPA (LOOKER STUDIO) -->
