--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@
         <img src="3.jpg" alt="" style="max-width: 100%; height: auto;">
       </div>
 
+      <div class="slide">
+        <img src="4.png" alt="" style="max-width: 100%; height: auto;">
+      </div>
+
+      <div class="slide">
+        <img src="5.png" alt="" style="max-width: 100%; height: auto;">
+      </div>
+
+      <div class="slide">
+        <img src="6.png" alt="" style="max-width: 100%; height: auto;">
+      </div>
+
+      <div class="slide">
+        <img src="7.png" alt="" style="max-width: 100%; height: auto;">
+      </div>
+
     <!-- RECOMENDAÇÕES DA UPA (LOOKER STUDIO) -->
     <div class="slide">
       <iframe width="600" height="338" src="https://lookerstudio.google.com/embed/reporting/c111e834-20d8-47c8-8ba2-06db3c8d7c7c/page/AFr8C" frameborder="0" style="border:0" allowfullscreen></iframe>
