--- a/index.html
+++ b/index.html
@@ -17,35 +17,15 @@
         <img src="0.png" alt="Logotipo Upa" style="max-width: 100%; height: auto;">
       </div>
       <div class="slide">
-        <img src="1.jpg" alt="" style="max-width: 100%; height: auto;">
+        <img src="1.png" alt="" style="max-width: 100%; height: auto;">
       </div>
       
       <div class="slide">
-        <img src="2.jpg" alt="" style="max-width: 100%; height: auto;">
+        <img src="2.png" alt="" style="max-width: 100%; height: auto;">
       </div>
       
       <div class="slide">
-        <img src="3.jpg" alt="" style="max-width: 100%; height: auto;">
-      </div>
-
-      <div class="slide">
-        <img src="4.png" alt="" style="max-width: 100%; height: auto;">
-      </div>
-
-      <div class="slide">
-        <img src="5.png" alt="" style="max-width: 100%; height: auto;">
-      </div>
-
-      <div class="slide">
-        <img src="6.png" alt="" style="max-width: 100%; height: auto;">
-      </div>
-
-      <div class="slide">
-        <img src="7.png" alt="" style="max-width: 100%; height: auto;">
-      </div>
-
-      <div class="slide">
-        <img src="8.png" alt="" style="max-width: 100%; height: auto;">
+        <img src="3.png" alt="" style="max-width: 100%; height: auto;">
       </div>
 
     <!-- RECOMENDAÇÕES DA UPA (LOOKER STUDIO) -->
@@ -83,10 +63,10 @@
 
 
 
-    <!-- PACIENTES ATENDIDOS DENTRO DO TEMPO DE ESPERA PELO PROTOCOLO DE MANCHESTER -->
+    <!-- PACIENTES ATENDIDOS DENTRO DO TEMPO DE ESPERA PELO PROTOCOLO DE MANCHESTER 
     <div class="slide">
       <iframe title="ANÁLISE TEMPO DE ESPERA" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiMDkzYzM3OGYtNWM4Zi00ZDdhLWFhYzgtMmNkYjQ5MmZiZTQwIiwidCI6ImFmNDRlOWVmLWU3MGMtNGM3Ni1iNTk1LTdhOTRmYzBlOGVlZiJ9&pageName=ReportSection3e2cc0e38714ab4e74f5" frameborder="0" allowFullScreen="true"></iframe>
-    </div>
+    </div> -->
 
   </div>
 
