--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         <img src="0.png" alt="Logotipo Upa" style="max-width: 100%; height: auto;">
       </div>
       <div class="slide">
-        <img src="1.png" alt="" style="max-width: 100%; height: auto;">
+        <img src="1.jpg" alt="" style="max-width: 100%; height: auto;">
       </div>
       
       <div class="slide">
-        <img src="2.png" alt="" style="max-width: 100%; height: auto;">
+        <img src="2.jpg" alt="" style="max-width: 100%; height: auto;">
       </div>
       
       <div class="slide">
-        <img src="3.png" alt="" style="max-width: 100%; height: auto;">
+        <img src="3.jpg" alt="" style="max-width: 100%; height: auto;">
       </div>
 
     <!-- RECOMENDAÇÕES DA UPA (LOOKER STUDIO) -->
