--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
 
       <div class="slide">
-        <img src="6.png" alt="" style="max-width: 100%; height: auto;">
+        <img src="6.jpg" alt="" style="max-width: 100%; height: auto;">
       </div>
 
     <!-- RECOMENDAÇÕES DA UPA (LOOKER STUDIO) -->
