--- a/index.html
+++ b/index.html
@@ -45,6 +45,22 @@
         <img src="7.jpg" alt="" style="max-width: 100%; height: auto;">
       </div>
 
+      <div class="slide">
+        <img src="vermelho1.jpeg" alt="" style="max-width: 100%; height: auto;">
+      </div>
+
+      <div class="slide">
+        <img src="vermelho2.jpeg" alt="" style="max-width: 100%; height: auto;">
+      </div>
+
+      <div class="slide">
+        <img src="vermelho3.jpeg" alt="" style="max-width: 100%; height: auto;">
+      </div>
+
+      <div class="slide">
+        <img src="vermelho4.jpeg" alt="" style="max-width: 100%; height: auto;">
+      </div>
+
     <!-- RECOMENDAÇÕES DA UPA (LOOKER STUDIO) -->
     <div class="slide">
       <iframe width="600" height="338" src="https://lookerstudio.google.com/embed/reporting/c111e834-20d8-47c8-8ba2-06db3c8d7c7c/page/AFr8C" frameborder="0" style="border:0" allowfullscreen></iframe>
