--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
   </div>
   
   <div id="slideshow">
-     
       <div class="slide">
+        <img src="0.png" alt="Logotipo Upa" style="max-width: 100%; height: auto;">
+      </div>
+      
+     <div class="slide">
         <img src="branco 1.jpeg" alt="" style="max-width: 100%; height: auto;">
       </div>
 
@@ -25,8 +28,6 @@
       <div class="slide">
         <img src="branco 3.jpeg" alt="" style="max-width: 100%; height: auto;">
       </div>
-
-  
 
     <!-- RECOMENDAÇÕES DA UPA (LOOKER STUDIO) -->
     <div class="slide">
