--- a/index.html
+++ b/index.html
@@ -29,7 +29,26 @@
         <img src="branco 3.jpeg" alt="" style="max-width: 100%; height: auto;">
       </div>
 
+      <div class="slide">
+        <img src="aniver 1.jpg" alt="" style="max-width: 100%; height: auto;">
+      </div>
 
+      <div class="slide">
+        <img src="aniver 2.jpg" alt="" style="max-width: 100%; height: auto;">
+      </div>
+
+      <div class="slide">
+        <img src="aniver 3.jpg" alt="" style="max-width: 100%; height: auto;">
+      </div>
+
+      <div class="slide">
+        <img src="aniver 4.jpg" alt="" style="max-width: 100%; height: auto;">
+      </div>
+
+      <div class="slide">
+        <img src="aniver 5.jpg" alt="" style="max-width: 100%; height: auto;">
+      </div>
+     
     <!-- RECOMENDAÇÕES DA UPA (LOOKER STUDIO) -->
     <div class="slide">
       <iframe width="600" height="338" src="https://lookerstudio.google.com/embed/reporting/c111e834-20d8-47c8-8ba2-06db3c8d7c7c/page/AFr8C" frameborder="0" style="border:0" allowfullscreen></iframe>
