--- a/index.html
+++ b/index.html
@@ -18,6 +18,34 @@
       </div>
 
       <div class="slide">
+        <img src="abrilverde.jpg" alt="Logotipo Upa" style="max-width: 100%; height: auto;">
+      </div>
+
+      <div class="slide">
+        <img src="nv1.png" alt="Logotipo Upa" style="max-width: 100%; height: auto;">
+      </div>
+
+      <div class="slide">
+        <img src="nv2.png" alt="Logotipo Upa" style="max-width: 100%; height: auto;">
+      </div>
+
+      <div class="slide">
+        <img src="nv3.png" alt="Logotipo Upa" style="max-width: 100%; height: auto;">
+      </div>
+
+      <div class="slide">
+        <img src="nv4.png" alt="Logotipo Upa" style="max-width: 100%; height: auto;">
+      </div>
+
+      <div class="slide">
+        <img src="nv5.png"Logotipo Upa" style="max-width: 100%; height: auto;">
+      </div>
+
+      <div class="slide">
+        <img src="nv6.png" alt="Logotipo Upa" style="max-width: 100%; height: auto;">
+      </div>
+
+      <div class="slide">
         <img src="01.jpg" alt="Logotipo Upa" style="max-width: 100%; height: auto;">
       </div>
 
